--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
 		</div>
 
 		<div class="bottom-line">
-			<strong>© Проект выполнен по уроку от WebDesign Master</strong>.
+			<strong>© WebDesign Master</strong>. Демонстрационный пример <a href="https://webdesign-master.ru/blog/javascript/javascript-3d-tilt-animation.html" target="_blank">урока</a>.
 		</div>
 
 	</header>
