--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 	<title><!--#echo var="title" --></title>
-	<meta name="description" content="3D Tilt анимации на JavaScript">
+	<meta name="description" content="Урок по созданию 3D Tilt анимации на JavaScript">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="images/favicon.png">
 	<meta property="og:image" content="images/dist/preview.jpg">
